# gw2-multibox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DEVELOPER_HANDOFF.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config-ffxiv.yaml  config-launcher.yaml  config-single.yaml  config-test.yaml  config-wow.yaml  config.yaml  config.yaml.example
.github/: dependabot.yml  pr_body_gw2_multibox_20260629.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config_help.yml  feature_request.yml
.github/workflows/: ci.yml  cowork-auto-pr.yml  release.yml  rust.yml
docs/: architecture.md  config-reference.md  user-guide.md
examples/: README.md
installer/: multisbox.nsi
src/: broadcast.rs  config.rs  file_lock.rs  hotkey.rs  http.rs  junction.rs  launcher.rs  launcher_inject.rs  lib.rs  log.rs  main.rs  mutex_kill.rs  tray.rs  window.rs
src/ui/static/: app.js  index.html  style.css
tools/: README-LAUNCH-OPTIONS.md
tools/Gw2LauncherStarter/: Gw2LauncherStarter.csproj  Program.cs
tools/multisbox-bypass/: Cargo.toml
tools/multisbox-bypass/src/: lib.rs
