[package]
name = "gw2-multibox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
winapi = { version = "0.3.9", features = ["winuser", "winbase", "processthreadsapi", "minwindef", "synchapi", "shellapi", "libloaderapi", "psapi", "handleapi", "winnt", "memoryapi", "processenv", "tlhelp32"] }
